# bad_translation_bot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.rst  copypastas.json  docker-compose.yml  mypy.ini  pyproject.toml
bad_translation_bot/: __init__.py  translator.py
tests/: test_bad_translation_bot.py
