[tool.poetry]
name = "bad_translation_bot"
version = "0.1.0"
description = "Bad Translation Discord Bot"
authors = ["Carson Mullins <septem151@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-translate = "^3.3.2"
"discord.py" = "^1.7.3"
python-dotenv = "^0.19.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
black = "^21.7b0"
mypy = "^0.910"
pylint = "^2.9.6"
types-requests = "^2.25.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.design]
max-args = 6

[tool.pylint.messages_control]
disable = "C0330, C0326, C0114, C0116"

[tool.pylint.format]
max-line-length = "88"
